force-app/main/default/objects/hed__Application__c/fields/Application_Level__c.field-meta.xml
<CustomField>
    <fullName>Application_Level__c</fullName>
    <description>Is application for undergraduate or graduate?</description>
    <inlineHelpText>Is application for undergraduate or graduate?</inlineHelpText>
    <label>Application Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>