force-app/main/default/objects/hed__Application__c/fields/Application_Reference__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference__c</fullName>
    <description>Unique reference per Slate ID per Term.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique reference per Slate ID per Term.</inlineHelpText>
    <label>Application Reference</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>