force-app/main/default/objects/hed__Application__c/fields/Fulfilled_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Checklist_Items__c</fullName>
    <description>Checklist Items that have been completed on the application.</description>
    <inlineHelpText>Checklist Items that have been completed on the application.</inlineHelpText>
    <label>Fulfilled Checklist Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>