force-app/main/default/objects/hed__Application__c/fields/Missing_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>Missing_Checklist_Items__c</fullName>
    <description>Application Checklist Items that are missing.</description>
    <inlineHelpText>Application Checklist Items that are missing.</inlineHelpText>
    <label>Missing Checklist Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>