force-app/main/default/objects/hed__Application__c/fields/Slate_App_Status__c.field-meta.xml
<CustomField>
    <fullName>Slate_App_Status__c</fullName>
    <description>Application Status in Slate.</description>
    <inlineHelpText>Application Status in Slate.</inlineHelpText>
    <label>Slate App Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decided</fullName>
            </value>
            <value>
                <fullName>Awaiting Materials</fullName>
            </value>
            <value>
                <fullName>Awaiting Decision</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment</fullName>
            </value>
            <value>
                <fullName>Awaiting Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>