force-app/main/default/objects/hed__Application__c/fields/Slate_Credits__c.field-meta.xml
<CustomField>
    <fullName>Slate_Credits__c</fullName>
    <description>Credits coming into Slate Application.</description>
    <inlineHelpText>Credits coming into Slate Application.</inlineHelpText>
    <label>Slate Credits</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>