force-app/main/default/objects/hed__Application__c/fields/Slate_Decision__c.field-meta.xml
<CustomField>
    <fullName>Slate_Decision__c</fullName>
    <description>Decision made on the Slate application.</description>
    <inlineHelpText>Decision made on the Slate application.</inlineHelpText>
    <label>Slate Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admit</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Deposit Deferred</fullName>
            </value>
            <value>
                <fullName>Deposit Not Required</fullName>
            </value>
            <value>
                <fullName>Deposit Paid</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
            <value>
                <fullName>Regret</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>