force-app/main/default/objects/hed__Application__c/fields/Slate_Email1__c.field-meta.xml
<CustomField>
    <fullName>Slate_Email1__c</fullName>
    <description>Slate Application Email1 field.</description>
    <inlineHelpText>Slate Application Email1 field.</inlineHelpText>
    <label>Slate Email1</label>
    <type>Email</type>
</CustomField>