force-app/main/default/objects/hed__Application__c/fields/Slate_Email2__c.field-meta.xml
<CustomField>
    <fullName>Slate_Email2__c</fullName>
    <description>Slate Application Email2</description>
    <inlineHelpText>Slate Application Email2</inlineHelpText>
    <label>Slate Email2</label>
    <type>Email</type>
</CustomField>