force-app/main/default/objects/hed__Application__c/fields/Slate_Email3__c.field-meta.xml
<CustomField>
    <fullName>Slate_Email3__c</fullName>
    <description>Slate Application Email3</description>
    <inlineHelpText>Slate Application Email3</inlineHelpText>
    <label>Slate Email3</label>
    <type>Email</type>
</CustomField>