force-app/main/default/objects/hed__Application__c/fields/Slate_ID__c.field-meta.xml
<CustomField>
    <fullName>Slate_ID__c</fullName>
    <description>Slate ID from slate.</description>
    <externalId>true</externalId>
    <inlineHelpText>Slate ID from slate.</inlineHelpText>
    <label>Slate ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>