force-app/main/default/objects/hed__Application__c/fields/Slate_Official_GPA__c.field-meta.xml
<CustomField>
    <fullName>Slate_Official_GPA__c</fullName>
    <description>Official GPA in Slate system.</description>
    <inlineHelpText>Official GPA in Slate system.</inlineHelpText>
    <label>Slate Official GPA</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>